test: 💍 test setup

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,3 +74,24 @@
 		@apply bg-background text-foreground;
 	}
 }
+
+@layer utilities {
+	/* Hide scrollbar for Chrome, Safari and Opera */
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+
+	/* Hide scrollbar for IE, Edge and Firefox */
+	.no-scrollbar {
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+	}
+
+	.animation-delay-1000 {
+		animation-delay: 1000ms;
+	}
+
+	.animation-fill-forward {
+		animation-fill-mode: forwards;
+	}
+}
